Feature / Move gateway authentication to a separate service (#477)
* Add a new auth service to Gradle build files

* Rename GrpcAuthValidator

* Add thread local logging helper

* Rename GrpcAuthHelpers

* Provide a general HTTP/1 auth validator as part of the common auth (internal) package

* Include HTTP codecs (1 & 2) in the common lib package

* Use the new auth validator as the auth handler in the gateway. Login processing is removed from the gateway and will now be handled by the auth service.

* Remove gateway dependency on -lib-auth. Gateway is just using internal auth validation, the same as a regular service.

* Disable auth for protocol negotiation test

* Explicit protocol version check in protocol negotiation test

* Allow for Web Sockets in the HTTP/1 auth validator

* Disable auth in the HTTP/1 proxy test

* Do not prepare auth in platform tests if auth is disabled

* Disable auth in unit tests where it is not needed

* Clean up some code warnings

* Disable auth for web API testing workflow

* Move HTTP test helpers into common test library

* Stub class for the authentication service

* Add auth service to the platform test framework

* Start skeleton auth service in a test case

* Stub test cases for guest login

* Factor protocol negotiator into a common base class and move to common lib

* Move protocol negotiator test to common lib

* Make the gateway use the new common protocol negotiator

* Move web server onto the common protocol negotiator

* Fix setup of HTTP codec for different scenarios in the protocol negotiator

* Let the auth service start up and install the auth router

* Rename TRAC auth providers package

* Move user DB into impl package for TRAC auth

* Rename login provider interface

* Rename methods in login interface

* Rename auth headers interface

* Rename auth login package

* Rename simple login package

* Rename simple login plugin

* Restrict simple lo